<resources>
    <string name="app_name">软考</string>
    <string name="login_please_input_phone">请输入手机号</string>
    <string name="login_please_input_password">请输入密码</string>
    <string name="login_button_label">登录</string>
    <string name="login_success_label">登录成功</string>
    <string name="fragment_login_please_input_confrim_pwd">请输入确认密码</string>
    <string name="fragment_login_please_input_pwd_equals">密码不一致</string>
    <string name="menu_question_count_label">%1$d/%2$d</string>
    <string name="menu_show_answer_label">显示参考答案</string>
    <string name="fragment_question_item_suggest_label">参考答案</string>
    <string name="fragment_question_item_title_label">题目 %d</string>
    <string name="fragment_question_item_choose_label">选项</string>
    <string name="fragment_question_item_answer_label">解析</string>
    <string name="fragment_question_item_selece_answer_label">答题</string>
    <string name="fragment_login_loading_label">登录中...</string>
    <string name="register_label">注册</string>
    <string name="fragment_login_confrim_pwd">确认密码</string>
    <string name="activity_exam_detail_collect_label">收藏</string>
    <string name="activity_my_collect_label">我的收藏</string>
    <string name="activity_report_suggest_label">意见反馈</string>
    <string name="activity_reset_password_label">找回密码</string>
    <string name="activity_logout_label">退出当前账号</string>
    <string name="activity_setting_title">我的</string>
    <string name="fragment_report_please_input_email">请输入邮箱(会通过邮箱答复您 )</string>
    <string name="fragment_report_please_input_content">请反馈的内容</string>
    <string name="submit_label">提交</string>
    <string name="activity_exam_detail_report_label">错误反馈</string>
    <string name="fragment_reprot_question_error_alert">由于试卷量比较大，录入的过程中难免失误，如果您对：\n%s异议，请反馈给我们，我们将尽快修改!</string>
    <string name="agreement_text">
        <![CDATA[点击&quot;注册&quot;即表示已阅读并接受<font color=\\\'#818fda\\\'>《用户协议》</font>]]></string>
    <string name="activity_pay_label">付款微信二维码</string>
    <string name="activity_share_label">分享</string>
    <string name="free_use_label">免费试用</string>
    <string name="fragment_free_question_save_label">保存至相册</string>
    <string name="fragment_question_alert_save_alert">已保存至相册</string>
    <string name="forget_pwd_label">忘记密码</string>
</resources>
